mvap/mvaptpParser.java
// Generated from mvaptp.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mvaptpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		OR=10, AND=11, NOT=12, INF=13, INFEQ=14, SUP=15, SUPEQ=16, EQUAL=17, NEQ=18, 
		TRUE=19, FALSE=20, READ=21, WRITE=22, WHILE=23, FOR=24, ENTIER=25, REEL=26, 
		TYPE=27, IDENTIFIANT=28, EOL=29, NEWLINE=30, WS=31, UNMATCH=32;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_boolexpr = 2, RULE_condition = 3, 
		RULE_assignation = 4, RULE_instruction = 5, RULE_block = 6, RULE_whileloop = 7, 
		RULE_calcul = 8, RULE_finInstruction = 9;
	public static final String[] ruleNames = {
		"start", "expression", "boolexpr", "condition", "assignation", "instruction", 
		"block", "whileloop", "calcul", "finInstruction"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'/'", "'*'", "'-'", "'+'", "'='", "'{'", "'}'", "'or'", 
		"'and'", "'not'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'true'", 
		"'false'", "'readln'", "'println'", "'while'", "'for'", null, null, null, 
		null, "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "OR", "AND", 
		"NOT", "INF", "INFEQ", "SUP", "SUPEQ", "EQUAL", "NEQ", "TRUE", "FALSE", 
		"READ", "WRITE", "WHILE", "FOR", "ENTIER", "REEL", "TYPE", "IDENTIFIANT", 
		"EOL", "NEWLINE", "WS", "UNMATCH"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mvaptp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private final int INT_MEM_ADDR = 10;
	    private final int FLOAT_MEM_ADDR = 30;
	    private final int REG_A_INT_ADDR = 0;
	    private final int REG_B_INT_ADDR = 1;
	    private final int REG_A_FLOAT_ADDR = 0;
	    private final int REG_B_FLOAT_ADDR = 2;

	    private TablesSymboles globalSymbols = new TablesSymboles();
	    private TablesSymboles localsSymbols = new TablesSymboles();

	    private TableSymboles tablesSymboles = new TableSymboles();
	    private double evalexpr (Double x, String op, Double y) {
	        if ( op.equals("*") ){
	            return x*y;
	        } else if ( op.equals("/") ){
	            return x/y;
	        } else if ( op.equals("%") ){
	            return x%y;
	        } else if ( op.equals("+") ){
	            return x+y;
	        } else if ( op.equals("-") ){
	            return x-y;
	        } else {
	            System.err.println("Opérateur arithmétique inconnu : '"+op+"'");
	            throw new IllegalArgumentException("Opérateur arithmétique inconnu : '"+op+"'");
	        }
	   }

	   private String evalMathOperation(String op){
	        if ( op.equals("*") ){
	            return "MUL\n";
	        } else if ( op.equals("/") ){
	            return "DIV\n";
	        } else if ( op.equals("+") ){
	            return "ADD\n";
	        } else if ( op.equals("-") ){
	            return "SUB\n";
	        } else {
	            System.err.println("Opérateur arithmétique inconnu : '"+op+"'");
	            throw new IllegalArgumentException("Opérateur arithmétique inconnu : '"+op+"'");
	        }
	   }

	    private int getRealGlobalAddress(String symbol){
	        return getRealGlobalAddress(tablesSymboles.getAdresseType(symbol));
	    }

	    private int getRealGlobalAddress(AdresseType at){
	        return getRealGlobalAddress(at.adresse);
	    }

	    private int getRealGlobalAddress(int addr){
	        return addr + 2;
	    }

	   private String evalType(String type){
	        if (type.equals("int"))
	            return "int";
	        else if (type.equals("float"))
	            return "float";
	        else
	            throw new IllegalArgumentException("Unknown type :'"+type+"'");
	   }
	    private int _label = 0;
	    /** générateur de nom d'étiquettes */
	    private int nextLabel() { return _label++; }

	public mvaptpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public CalculContext calcul;
		public CalculContext calcul() {
			return getRuleContext(CalculContext.class,0);
		}
		public TerminalNode EOF() { return getToken(mvaptpParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((StartContext)_localctx).calcul = calcul();
			setState(21);
			match(EOF);
			System.out.println(((StartContext)_localctx).calcul.code);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String code;
		public ExpressionContext l;
		public Token ENTIER;
		public Token REEL;
		public Token IDENTIFIANT;
		public ExpressionContext r;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ENTIER() { return getToken(mvaptpParser.ENTIER, 0); }
		public TerminalNode REEL() { return getToken(mvaptpParser.REEL, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(mvaptpParser.IDENTIFIANT, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		 ((ExpressionContext)_localctx).code =  new String(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(25);
				match(T__0);
				setState(26);
				((ExpressionContext)_localctx).l = expression(0);
				setState(27);
				match(T__1);
				_localctx.code += ((ExpressionContext)_localctx).l.code;
				}
				break;
			case ENTIER:
				{
				setState(30);
				((ExpressionContext)_localctx).ENTIER = match(ENTIER);
				_localctx.code += "PUSHI "+(((ExpressionContext)_localctx).ENTIER!=null?((ExpressionContext)_localctx).ENTIER.getText():null)+"\n";
				}
				break;
			case REEL:
				{
				setState(32);
				((ExpressionContext)_localctx).REEL = match(REEL);
				_localctx.code += "PUSHF "+(((ExpressionContext)_localctx).REEL!=null?((ExpressionContext)_localctx).REEL.getText():null)+"\n";
				}
				break;
			case IDENTIFIANT:
				{
				setState(34);
				((ExpressionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);

				            int addr = getRealGlobalAddress((((ExpressionContext)_localctx).IDENTIFIANT!=null?((ExpressionContext)_localctx).IDENTIFIANT.getText():null));
				            _localctx.code += "PUSHG " + addr+"\n";
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(38);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(39);
						match(T__2);
						setState(40);
						((ExpressionContext)_localctx).r = expression(8);
						_localctx.code += ((ExpressionContext)_localctx).l.code+((ExpressionContext)_localctx).r.code+"DIV\n";
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(43);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(44);
						match(T__3);
						setState(45);
						((ExpressionContext)_localctx).r = expression(7);
						_localctx.code += ((ExpressionContext)_localctx).l.code+((ExpressionContext)_localctx).r.code+"MUL\n";
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(48);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(49);
						match(T__4);
						setState(50);
						((ExpressionContext)_localctx).r = expression(6);
						_localctx.code += ((ExpressionContext)_localctx).l.code+((ExpressionContext)_localctx).r.code+"SUB\n";
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(53);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(54);
						match(T__5);
						setState(55);
						((ExpressionContext)_localctx).r = expression(5);
						_localctx.code += ((ExpressionContext)_localctx).l.code+((ExpressionContext)_localctx).r.code+"ADD\n";
						}
						break;
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BoolexprContext extends ParserRuleContext {
		public String code;
		public BoolexprContext l;
		public BoolexprContext c;
		public ConditionContext condition;
		public BoolexprContext r;
		public List<BoolexprContext> boolexpr() {
			return getRuleContexts(BoolexprContext.class);
		}
		public BoolexprContext boolexpr(int i) {
			return getRuleContext(BoolexprContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(mvaptpParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(mvaptpParser.FALSE, 0); }
		public TerminalNode NOT() { return getToken(mvaptpParser.NOT, 0); }
		public TerminalNode AND() { return getToken(mvaptpParser.AND, 0); }
		public TerminalNode OR() { return getToken(mvaptpParser.OR, 0); }
		public BoolexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).enterBoolexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).exitBoolexpr(this);
		}
	}

	public final BoolexprContext boolexpr() throws RecognitionException {
		return boolexpr(0);
	}

	private BoolexprContext boolexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BoolexprContext _localctx = new BoolexprContext(_ctx, _parentState);
		BoolexprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_boolexpr, _p);
		 ((BoolexprContext)_localctx).code =  new String(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(64);
				match(T__0);
				setState(65);
				((BoolexprContext)_localctx).c = boolexpr(0);
				setState(66);
				match(T__1);
				 _localctx.code += ((BoolexprContext)_localctx).c.code;
				}
				break;
			case 2:
				{
				setState(69);
				((BoolexprContext)_localctx).condition = condition();
				_localctx.code += ((BoolexprContext)_localctx).condition.code;
				}
				break;
			case 3:
				{
				setState(72);
				match(TRUE);
				 _localctx.code += "PUSHI 1\n"; 
				}
				break;
			case 4:
				{
				setState(74);
				match(FALSE);
				 _localctx.code += "PUSHI 0\n"; 
				}
				break;
			case 5:
				{
				setState(76);
				match(NOT);
				setState(77);
				((BoolexprContext)_localctx).r = boolexpr(3);

				        _localctx.code += ((BoolexprContext)_localctx).r.code;
				        _localctx.code += "PUSHI 0\n";
				        _localctx.code += "EQUAL\n";
				    
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(92);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new BoolexprContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_boolexpr);
						setState(82);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(83);
						match(AND);
						setState(84);
						((BoolexprContext)_localctx).r = boolexpr(3);

						                  _localctx.code += ((BoolexprContext)_localctx).l.code;
						                  _localctx.code += ((BoolexprContext)_localctx).r.code;
						                  _localctx.code += "EQUAL\n";
						              
						}
						break;
					case 2:
						{
						_localctx = new BoolexprContext(_parentctx, _parentState);
						_localctx.l = _prevctx;
						_localctx.l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_boolexpr);
						setState(87);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(88);
						match(OR);
						setState(89);
						((BoolexprContext)_localctx).r = boolexpr(2);

						                  _localctx.code += ((BoolexprContext)_localctx).l.code;
						                  _localctx.code += ((BoolexprContext)_localctx).r.code;
						                  _localctx.code += "ADD\n";
						                  _localctx.code += "PUSHI 0\n";
						                  _localctx.code += "SUP\n";
						              
						}
						break;
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public String code;
		public ConditionContext c;
		public ExpressionContext l;
		public ExpressionContext r;
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode INF() { return getToken(mvaptpParser.INF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode INFEQ() { return getToken(mvaptpParser.INFEQ, 0); }
		public TerminalNode SUP() { return getToken(mvaptpParser.SUP, 0); }
		public TerminalNode SUPEQ() { return getToken(mvaptpParser.SUPEQ, 0); }
		public TerminalNode EQUAL() { return getToken(mvaptpParser.EQUAL, 0); }
		public TerminalNode NEQ() { return getToken(mvaptpParser.NEQ, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condition);
		 ((ConditionContext)_localctx).code =  new String(); 
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(T__0);
				setState(98);
				((ConditionContext)_localctx).c = condition();
				setState(99);
				match(T__1);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).c.code;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((ConditionContext)_localctx).l = expression(0);
				setState(103);
				match(INF);
				setState(104);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "INF\n";
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				((ConditionContext)_localctx).l = expression(0);
				setState(108);
				match(INFEQ);
				setState(109);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "INFEQ\n";
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				((ConditionContext)_localctx).l = expression(0);
				setState(113);
				match(SUP);
				setState(114);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "SUP\n";
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				((ConditionContext)_localctx).l = expression(0);
				setState(118);
				match(SUPEQ);
				setState(119);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "SUPEQ\n";
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				((ConditionContext)_localctx).l = expression(0);
				setState(123);
				match(EQUAL);
				setState(124);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "EQUAL\n";
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				((ConditionContext)_localctx).l = expression(0);
				setState(128);
				match(NEQ);
				setState(129);
				((ConditionContext)_localctx).r = expression(0);
				 ((ConditionContext)_localctx).code =  ((ConditionContext)_localctx).l.code + ((ConditionContext)_localctx).r.code + "NEQ\n";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignationContext extends ParserRuleContext {
		public String code;
		public Token TYPE;
		public Token IDENTIFIANT;
		public ExpressionContext expression;
		public TerminalNode TYPE() { return getToken(mvaptpParser.TYPE, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(mvaptpParser.IDENTIFIANT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).enterAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mvaptpListener ) ((mvaptpListener)listener).exitAssignation(this);
		}
	}

	public final AssignationContext assignation() throws RecognitionException {
		AssignationContext _localctx = new AssignationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignation);
		 ((AssignationContext)_localctx).code =  new String(); 
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				((AssignationContext)_localctx).TYPE = match(TYPE);
				setState(135);
				((AssignationContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
